Encrypted config.json for travis to use

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: python
 python:
-  - "2.7"
-  - "3.3"
-# command to install dependencies
-install: "pip install -r requirements.txt"
-# command to run tests
+- '2.7'
+- '3.3'
+install: pip install -r requirements.txt
 script: nosetests
+before_install:
+- openssl aes-256-cbc -K $encrypted_173672a6c39d_key -iv $encrypted_173672a6c39d_iv
+  -in config.json.enc -out .\\config.json -d
