--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ python:
 - '2.7'
 - '3.3'
 install: pip install -r requirements.txt
-script: nosetests
+script:
+  - python listener.py
+  - python core-tests.py
+
 before_install:
 - openssl aes-256-cbc -K $encrypted_c5db624f897a_key -iv $encrypted_c5db624f897a_iv
   -in config.json.enc -out config.json -d
