--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 - '3.3'
 install: pip install -r requirements.txt
 script:
-  - python ~/tests/core-tests.py
+  - python tests/core-tests.py
 
 before_install:
 - openssl aes-256-cbc -K $encrypted_c5db624f897a_key -iv $encrypted_c5db624f897a_iv
